<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dk.sdu.mmmi.cbse</groupId>
        <artifactId>pronetbeans-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>pronetbeans-app</artifactId>
    <packaging>nbm-application</packaging>

    <name>ProNetbeans-App</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <all.clusters>${project.build.directory}/${brandingToken}</all.clusters>
        <netbeans.run.params.ide/>
        <!--        -Dnetbeans.logger.console=true-->
        <!--        -J-XX:MaxPermSize=256m -J-Xmx512m -->
        <!--        -J-Dplugin.manager.check.interval=1 -J-Dorg.netbeans.modules.autoupdate.level=FINEST -J-Dnetbeans.logger.console=true-->
        <netbeans.run.params>${netbeans.run.params.ide} --nosplash -J-Dplugin.manager.check.interval=1</netbeans.run.params>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>


    <dependencies>
        <!--        <dependency>
            <groupId>org.netbeans.cluster</groupId>
            <artifactId>platform</artifactId>
            <version>${netbeans.version}</version>
            <type>pom</type>
        </dependency>-->
        <!-- NbModuleSuite functional in RELEASE70 or later: -->
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-nbjunit</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope> <!-- beyond platform cluster, this often needs to be dropped down to compile/runtime, some other modules i  n IDE clusters depend on it -->
        </dependency>
        <!-- To use Jelly Tools in your functional tests, add or replace with:        -->
        <!--    <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-jellytools-platform</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope>
        </dependency>-->

        <dependency>
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-core-startup</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <!--        <dependency>
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-core-windows</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-autoupdate-ui</artifactId>
            <version>${netbeans.version}</version>
        </dependency>-->



        <!--        <dependency>
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-core-ui</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>-->

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>pronetbeans-branding</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!--        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Collision</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Enemy</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Expiration</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Move</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Player</artifactId>
            <version>${project.version}</version>
        </dependency>-->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Assets</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.decouplink</groupId>
            <artifactId>decouplink</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>SilentUpdate</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Player</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <configuration>
                    <installerOsSolaris>false</installerOsSolaris>
                    <installerOsMacosx>false</installerOsMacosx>
                    <installerOsLinux>false</installerOsLinux>
                    <installerOsWindows>false</installerOsWindows>
                </configuration>
            </plugin>
            <!-- Permits NbModuleSuite to be run in integration-test phase: -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.2</version>
                <configuration>
                    <systemPropertyVariables>
                        <all.clusters>${all.clusters}</all.clusters>
                        <branding.token>${brandingToken}</branding.token>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deployment</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>nbm-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>extra</id>
                                <goals>
                                    <goal>autoupdate</goal>
                                    <!--                                    <goal>webstart-app</goal>
                                    <goal>build-installers</goal>-->
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>